--- a/style.css
+++ b/style.css
@@ -32,10 +32,21 @@ h1 {
 #search-bar {
     width: 100%;
     padding: 5px;
+    margin-bottom: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+
+#sort-select {
+    width: 100%;
+    padding: 5px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
     box-sizing: border-box;
+    font-size: 12px;
+    background: white;
 }
 
 #layers-list {
